# SNIProxy-rs

./: .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  CONFIG_ANALYSIS.md  CONFIG_CHECK_COMPLETE.md  CONFIG_COMPLETION_SUMMARY.md  CONFIG_VERIFICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_REPORT.md  Dockerfile  FILE_DESCRIPTOR_ANALYSIS.md  FIX_FILE_LIMITS.md  HTTP3_EXPLANATION.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LIVE_TEST_SUMMARY.md  MANUAL_TESTING_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE2_PARTIAL_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE_STATUS.md  PRODUCTION_VERIFICATION.md  PROJECT_SUMMARY.md  PROTOCOL_STATUS_REPORT.md  PROTOCOL_TEST_SUMMARY.md  PROTOCOL_VERIFICATION.md  QUICK_START.md  README.md  SSH_CLIENT_SETUP.md  SSH_HOSTS_FILE_ISSUE.md  SSH_QUICKSTART.md  TESTING_ON_STANDARD_PORTS.md  TEST_SUMMARY.md  TODO_ANALYSIS.md  build.sh  compose.yaml  (+15 more)
.github/: RUNNER_SETUP.md
.github/workflows/: ci.yml
examples/: basic_proxy.rs  config_loading.rs  proxy_with_metrics.rs  sni_extraction.rs
sniproxy/: Cargo.toml
sniproxy-bin/: Cargo.toml
sniproxy-bin/src/: lib.rs  main.rs
sniproxy-config/: Cargo.toml
sniproxy-config/src/: lib.rs
sniproxy-config/test_configs/: test_basic.yaml  test_full.yaml  test_minimal.yaml
sniproxy-config/tests/: config_validation.rs
sniproxy-core/: Cargo.toml
sniproxy-core/benches/: pool_operations.rs  sni_parsing.rs  throughput.rs
sniproxy-core/src/: connection.rs  connection_pool.rs  grpc_pool.rs  http.rs  http2_cache.rs  lib.rs  metrics_cache.rs  qpack.rs  quic_handler.rs  ssh.rs  udp_connection.rs  websocket_compression.rs
sniproxy-core/src/protocols/: jsonrpc.rs  mod.rs  rpc.rs  soap.rs  socketio.rs  xmlrpc.rs
sniproxy-core/tests/: comprehensive_live_tests.rs  config_integration_test.rs  integration_test.rs  live_integration_tests.rs  protocol_tests.rs
sniproxy/src/: lib.rs
test/http1/: nginx.conf
test/http1/html/: index.html
test/http2/: nginx.conf
test/http2/certs/: http2.crt  http2.key
test/http2/html/: index.html
