[workspace]
resolver = "2"
members = [
    "sniproxy",
    "sniproxy-core",
    "sniproxy-config",
    "sniproxy-bin"
]

[workspace.package]
version = "0.1.0"
authors = ["Saman Sohani <samansohani78@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A high-performance SNI proxy in Rust"
repository = "https://github.com/example/sniproxy-rs"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
