[workspace]
resolver = "2"
members = [
    "sniproxy",
    "sniproxy-core",
    "sniproxy-config",
    "sniproxy-bin"
]

[workspace.package]
version = "0.1.0"
authors = ["Saman Sohani <samansohani78@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A high-performance SNI proxy in Rust"
repository = "https://github.com/samansohani78/SNIProxy-rs"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
criterion = "0.8.1"
tokio-tungstenite = "0.28.0"
tonic = "0.14.2"
prost = "0.14.1"
h2 = "0.4"
# Phase 1 dependencies
dashmap = "6.1"      # Lock-free concurrent HashMap
sha1 = "0.10"        # WebSocket handshake hash
base64 = "0.22"      # WebSocket accept encoding
# Phase 2 dependencies
quick-xml = "0.38"   # SOAP/XML-RPC parsing
roxmltree = "0.21"   # Fast XML parsing
serde_json = "1.0"   # JSON-RPC parsing
