[workspace]
resolver = "2"
members = [
    "sniproxy",
    "sniproxy-core",
    "sniproxy-config",
    "sniproxy-bin"
]

[workspace.package]
version = "0.1.0"
authors = ["Saman Sohani <samansohani78@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A high-performance SNI proxy in Rust"
repository = "https://github.com/samansohani78/SNIProxy-rs"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
prometheus = "0.14.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
criterion = "0.8.1"
tokio-tungstenite = "0.28.0"
tonic = "0.14.2"
prost = "0.14.1"
h2 = "0.4.12"
# Phase 1 dependencies
dashmap = "6.1.0"      # Lock-free concurrent HashMap
sha1 = "0.10.6"        # WebSocket handshake hash
base64 = "0.22.1"      # WebSocket accept encoding
# Phase 2 dependencies
quick-xml = "0.38.4"   # SOAP/XML-RPC parsing
roxmltree = "0.21.1"   # Fast XML parsing
serde_json = "1.0.148"   # JSON-RPC parsing
# Phase 3 dependencies
quinn = "0.11.9"       # QUIC implementation
rustls = "0.23.35"      # TLS 1.3 library
h3 = "0.0.8"         # HTTP/3 implementation
h3-quinn = "0.0.10"   # Quinn adapter for h3
rcgen = "0.14.6"       # Certificate generation for testing
# Phase 4 dependencies
lru = "0.16.2"         # LRU cache for HTTP/2 push cache
flate2 = "1.1.5"       # Compression for WebSocket permessage-deflate
async-compression = { version = "0.4.36", features = ["tokio", "deflate", "gzip"] }  # Async compression
