[package]
name = "sniproxy-bin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
name = "sniproxy_bin"
path = "src/lib.rs"

[[bin]]
name = "sniproxy-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
sniproxy-core = { path = "../sniproxy-core" }
sniproxy-config = { path = "../sniproxy-config" }
clap = { version = "4.5", features = ["derive"] }
