[package]
name = "sniproxy-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
sniproxy-config = { path = "../sniproxy-config" }
