[package]
name = "sniproxy-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
sniproxy-config = { path = "../sniproxy-config" }
# Phase 1 dependencies
dashmap = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
h2 = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[[bench]]
name = "sni_parsing"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "pool_operations"
harness = false
