[package]
name = "sniproxy-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
sniproxy-config = { path = "../sniproxy-config" }
# Phase 1 dependencies
dashmap = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
# Phase 2 dependencies
quick-xml = { workspace = true }
roxmltree = { workspace = true }
serde_json = { workspace = true }
# Phase 3 dependencies
quinn = { workspace = true }
rustls = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
# Phase 4 dependencies
lru = { workspace = true }
flate2 = { workspace = true }
async-compression = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
rcgen = { workspace = true }
criterion = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
h2 = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[[bench]]
name = "sni_parsing"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "pool_operations"
harness = false
