[package]
name = "sniproxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sniproxy-core = { path = "../sniproxy-core" }
sniproxy-config = { path = "../sniproxy-config" }
sniproxy-bin = { path = "../sniproxy-bin" }
tokio = { workspace = true }
